welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:48: error: not found: value geuche
  geuche();
  ^